<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/profile"
            android:icon="@drawable/user_icon"
            android:title="@string/profile"/>

        <item
            android:id="@+id/imc"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/IMC"/>

        <item
            android:id="@+id/collection"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/collection"/>

        <item
            android:id="@+id/classes"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/classes"/>

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/logOut"/>

    </group>
</menu>