<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    tools:context=".UI.IMC.Register.RegisterIMCActivity">

    <include
        android:id="@+id/viewToolBar"
        layout="@layout/view_tool_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:text="@string/imcRegister"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/height"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/weight"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray_medium"
        android:text="@string/register"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

</LinearLayout>