<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="15dp"
    tools:context=".UI.SignUp.SignUpActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/username"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium"
        app:startIconDrawable="@drawable/user_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/password"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/age"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/name"
        android:padding="5dp"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/gray_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:maxLength="45"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:backgroundTint="@color/button"
        android:text="@string/createUser"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp" />

</LinearLayout>