<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Home.HomeScreenActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/gray_bold"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- CardViews for each day -->
                <!-- Monday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/monday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background1" />

                    <TextView
                        android:id="@+id/tvtest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/monday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <!-- Tuesday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/tuesday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <!-- Wednesday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/wednesday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <!-- Thursday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/thursday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <!-- Friday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/friday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/friday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <!-- Saturday -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/saturday"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
